@@ -31,6 +31,7 @@
 
  Bug fixes:
 
+   - import-bourso-pdf/ofaImporter: accept empty lines on bottom page.
    - ofaExportAssistant: fix type selection (todo #982).
    - ofaGuidedInput: fix fields reset after validation (todo #973).
    - ofaLedgerClose: remove unused and badly cast box. 
